--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,46 @@
 
 @font-face{
-  font-family: myFont;
-   src: url(VCR_OSD_MONO_1.001.ttf);
+  font-family: myfont;
+   src: url(PixelCode.woff2);
   
+}
+html{
+font-family: myfont;
+text-underline-offset: 0.2em;
 }
 
 
 
 :root {
     --main-color:rgb(255, 167, 73);
-    --secondary-color:rgb(8, 43, 0);
-    --white-color:rgb(249, 247, 243);
+    --secondary-color:rgb(13, 12, 12);
+    --white-color:rgb(255, 252, 241);
     --link-color: rgb(0, 0, 255);
+ 
     
 
 }
 
+nav{
+width: 60%;  
+margin: auto;
+}
 
 .nav-link{
 display: inline-block;
-width: 4vw;
+width: 15%;
 text-align: center;
 border-left: 1px solid black;
-
-
-
-
+font-weight: bolder;
 
 }
 
 
 body{
   cursor: url(resurser/pointer.svg), auto;
-    font-family: myFont;
+  font-size: large;
+  line-height: 140%;
+  
     color: var(--secondary-color);
 -webkit-font-smoothing: none;
 font-kerning: none;
@@ -65,6 +73,7 @@ grid-area: sdr;
 }
 header{
  grid-area: hd;   
+ width: 100%;
  margin: auto;
  text-align: center;
 }
@@ -81,11 +90,10 @@ grid-template-rows: 1 2 3;
     margin: auto;
     
 }
-.dot:after{content: '<';visibility: hidden;}
+.dot:after{content: "<-";visibility: hidden; height:auto;}
 .dot:hover:after {display: inline-block;visibility: visible;}
-.dot:hover{
-text-decoration: none;
-cursor: url(cursor.svg);
+.dot:hover{ text-decoration: none;
+cursor: none;
 }
 
 
@@ -159,6 +167,7 @@ background-color: var(--white-color);
 
             a:link {
             color: var(--link-color);
+            text-shadow: 3 1 3 pink;
             background-color: transparent;
             text-decoration: none;
             margin: auto;
