--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 @font-face{
   font-family: myfont;
-   src: url(ChicagoFLF.ttf);
+   src: url(sysfont.woff2);
   
 }
 html{
@@ -14,7 +14,7 @@ text-underline-offset: 0.2em;
 :root {
     --main-color:rgb(255, 167, 73);
     --secondary-color:rgb(13, 12, 12);
-    --white-color:rgb(255, 252, 241);
+    --white-color:rgb(246, 245, 240);
     --link-color: rgb(0, 0, 255);
  
     
@@ -37,6 +37,9 @@ font-weight: bolder;
 
 
 body{
+     min-width:300px;        /* Suppose you want minimum width of 1000px */
+   width: auto !important;  /* Firefox will set width as auto */
+   width:1000px;    
   cursor: url(resurser/pointer.svg), auto;
   font-size: large;
   line-height: 140%;
@@ -90,9 +93,16 @@ grid-template-rows: 1 2 3;
     margin: auto;
     
 }
+.dot{
+text-shadow: 1px 1px 0px black;
+
+}
 .dot:after{content: "<-";visibility: hidden; height:auto;}
+
 .dot:hover:after {display: inline-block;visibility: visible;}
 .dot:hover{ text-decoration: none;
+  color: rgb(192, 216, 255);
+  text-shadow: 1px 1px 0px rgb(153, 153, 153);
 cursor: none;
 }
 
@@ -106,6 +116,13 @@ border: 3px solid var(--secondary-color);
 background-color: var(--white-color);
 }
 
+.green{
+
+color: rgb(166, 255, 179);
+text-shadow: 1px 2px 0px rgb(146, 146, 146);
+}
+
+
 
 .hem{
     color: black;
@@ -115,6 +132,7 @@ background-color: var(--white-color);
 }
 .hem:hover{
     color: rgb(87, 87, 87);
+    text-decoration: none !important;
    
 
 }
@@ -167,7 +185,7 @@ background-color: var(--white-color);
 
             a:link {
             color: var(--link-color);
-            text-shadow: 3 1 3 pink;
+ 
             background-color: transparent;
             text-decoration: none;
             margin: auto;
@@ -177,10 +195,10 @@ background-color: var(--white-color);
             a:visited {
             color: var(--link-color);
             background-color: transparent;
-         text-shadow: 1px 1px 1px var(--main-color);
+  
             }
             a:hover {
-            color: rgb(255, 0, 195);
+            color: rgb(255, 0, 230);
             background-color: transparent;
             text-decoration: wavy underline;
             cursor: url(resurser/link.svg), auto;
