--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 html{
 font-family: myfont;
-text-underline-offset: 0.2em;
+text-underline-offset: 0.4em;
 }
 
 
@@ -31,7 +31,7 @@ display: inline-block;
 width: 15%;
 text-align: center;
 border-left: 1px solid black;
-font-weight: bolder;
+font-size: x-large;
 
 }
 
@@ -50,7 +50,7 @@ font-kerning: none;
 
     image-rendering: pixelated;
     display: grid;
-    grid-template-columns: auto 50vw auto;
+    grid-template-columns: auto 60vw auto;
 grid-template-areas: "hd hd hd"
 "sdr main sdl";
 grid-gap: 10px;
@@ -65,6 +65,7 @@ grid-area: main;
 margin: auto;
 width: 100%;
 overflow-x: hidden;
+
 
 
 }
@@ -124,18 +125,20 @@ text-shadow: 1px 2px 0px rgb(146, 146, 146);
 
 
 
-.hem{
+.hem:link{
     color: black;
-    background-color: transparent;
-    text-shadow: none;
-
-}
+text-shadow: 1px 1px 0px rgb(131, 131, 131) !important;
+  }
 .hem:hover{
-    color: rgb(87, 87, 87);
-    text-decoration: none !important;
-   
+  color: rgb(199, 199, 199) !important;
+  text-shadow: 1px 1px 0px rgb(139, 139, 139);
+  text-decoration: none !important;
+   }
+   .hem:visited{
+    color: black;
 
-}
+    text-shadow: 1px 1px 0px rgb(145, 145, 145);
+   }
 
 /*.  SCROLL.   */
         .scroll {
@@ -160,14 +163,15 @@ text-shadow: 1px 2px 0px rgb(146, 146, 146);
 
         .scroll::-webkit-scrollbar-thumb {
                 
-        background-color: rgb(255, 147, 39);
-        border: 3px outset rgb(255, 157, 105);; 
+        background-color: rgb(96, 234, 28);
+        border: 3px outset rgb(103, 197, 32);; 
         height: 10vh;
         
                 }
 
         .scroll::-webkit-scrollbar-thumb:hover {
-                    background: rgb(255, 221, 169);
+                    background: rgb(177, 255, 151);
+                      border: 3px outset rgb(210, 255, 191);; 
                 }
 
         .scroll::-webkit-scrollbar-thumb:active{
@@ -182,6 +186,7 @@ text-shadow: 1px 2px 0px rgb(146, 146, 146);
 
 
 /*LÄNKAR*/
+
 
             a:link {
             color: var(--link-color);
@@ -232,7 +237,7 @@ text-shadow: 1px 2px 0px rgb(146, 146, 146);
   
   gap: var(--gap);
   min-width: 100%;
-    animation: scroll 10s linear infinite;
+    animation: scroll 20s linear infinite;
 }
 
 @keyframes scroll {
@@ -250,7 +255,9 @@ image-rendering: pixelated;
 
 }
 
-
+.center{
+text-align: center;
+}
 
 /* Pause on hover */
 .marquee--hover-pause:hover .marquee__content {
