--- a/styles.css
+++ b/styles.css
@@ -105,8 +105,8 @@ text-shadow: 1px 1px 0px black;
 
 .dot:hover:after {display: inline-block;visibility: visible;}
 .dot:hover{ text-decoration: none;
-  color: rgb(192, 216, 255);
-  text-shadow: 1px 1px 0px rgb(153, 153, 153);
+  color: #93b4ff;
+  text-shadow: 1px 1px 0px rgb(189, 205, 255);
 cursor: none;
 }
 
@@ -129,8 +129,8 @@ text-shadow: 1px 2px 0px rgb(146, 146, 146);
 
 
 .hem:link{
-    color: black;
-text-shadow: 1px 1px 0px rgb(131, 131, 131) !important;
+    color: var(--secondary-color);
+text-shadow: 2px 2px 0px rgb(131, 131, 131) !important;
   }
 .hem:hover{
   color: rgb(199, 199, 199) !important;
@@ -218,6 +218,7 @@ text-shadow: 1px 1px 0px rgb(131, 131, 131) !important;
             font-weight: bold;
             text-decoration: none;
             cursor: url(link2.svg),
+            
             }
 
 
